[gd_scene load_steps=5 format=3 uid="uid://pboagnvewk20"]

[ext_resource type="Script" path="res://source/ui/menus/mainmenu/mainmenu.gd" id="1_gt3we"]
[ext_resource type="Shader" path="res://source/ui/blur.gdshader" id="2_7lvat"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lxfd5"]
shader = ExtResource("2_7lvat")
shader_parameter/blur = 1.0
shader_parameter/brightness = 0.6

[sub_resource type="ShaderMaterial" id="ShaderMaterial_43o0q"]
resource_local_to_scene = true
shader = ExtResource("2_7lvat")
shader_parameter/blur = null
shader_parameter/brightness = null

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_gt3we")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
material = SubResource("ShaderMaterial_lxfd5")
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HeaderLarge"
text = "Godot 7DRL Starter 2024"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_43o0q")
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 4.0

[node name="NewGameButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigButton"
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigButton"
text = "Load Game"

[node name="OptionsButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigButton"
text = "Options"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"BigButton"
text = "Quit"
